auth + cors back

--- a/package.json
+++ b/package.json
@@ -17,6 +17,10 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "mysql": "^2.18.1"
+    "express-passport-logout": "^0.1.0",
+    "mysql": "^2.18.1",
+    "passport": "^0.4.1",
+    "passport-auth": "^0.1.4",
+    "passport-http": "^0.3.0"
   }
 }
