--- a/package.json
+++ b/package.json
@@ -16,9 +16,13 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "cloudinary": "^1.27.1",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-passport-logout": "^0.1.0",
+    "file-system": "^2.2.2",
+    "multer": "^1.4.4",
+    "multer-storage-cloudinary": "^4.0.0",
     "mysql": "^2.18.1",
     "passport": "^0.4.1",
     "passport-auth": "^0.1.4",
